@@ -79,6 +79,7 @@ stop(){
 
 restart(){
     stop
+    sleep 1
     start
 }
 
