@@ -1,3 +1,4 @@
+- more slack patch
 - added hotmail.de , hotmail.co.uk , hotmail.co.jp support
 - implemented PLUGIN_REQUIRE_VERSION
 - slack patch applied
